--- a/倒计时.html
+++ b/倒计时.html
@@ -58,6 +58,7 @@
              var oEm = oDateDiv.getElementsByTagName('em')[0];
              oSpan.innerHTML = endTime.toLocaleString();
              oEm.innerHTML = t;
+             document.title = t;
              console.log(t)
          }   
          countDownsecinds('2019-02-14 8:30:00');
