--- a/1.初识js事件.html
+++ b/1.初识js事件.html
@@ -14,6 +14,7 @@
             // alert = 表示警告弹窗
             // document = 表示当前文档
             // function(){} = 表示匿名函数
+            // 完整的解释:在当前文档单击执行匿名函数,运行函数中的警告弹窗
         }
     </script>
 </body>
